stylesheets/country.css
:root{
    --background-color: #050505;
    --text-color: #ffffff;
    --primary-color: #fadeb9;
    --info-text: #a0a0a0;
    --secondary-color: #1a1a1a;
    --selected-color: #272727;
}

.wrapper{
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 500px;
    width: 100%;
    gap: 5vh;
}

#subtitle{
    margin-top: -10vh;
}

.bg-img{
    height: 100vh;
    position:fixed;
    opacity: 0.1;
    top: 0;
    z-index: -1;
    object-fit: cover;
    object-position: center;
}

html{
    overflow: hidden;
}

body{
    background-color: var(--background-color);
    color: var(--text-color);
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    display: flex;
    justify-content: center;
    text-align: center;
    min-height: 100vh;
}

.titlebox{
    font-size: 6rem;
    margin-top: 2rem;
    transition: 0.2s ease-in-out;
    color: var(--primary-color);
}

.titlebox:hover{
    cursor: pointer;
    animation: 0.2s ease-in-out;
    transform: scale(1.08);
}

#input-bar{
    height: 1.7rem;
    background-color: var(--secondary-color);
    width: 100%;
    color: var(--text-color);
    box-sizing: border-box;
    border: solid 1px var(--primary-color);
    margin-top: -0.9rem;
    font-size: 1rem;
}

#input-bar:focus{
    outline: none;
}

#input-zone{
    display: flex;
    justify-content: start;
    flex-direction: column;
    width: 100%;
    position: relative;
    margin-top: 18vh;
}

#countries{
    display: flex;
    flex: 1;
    justify-content: start;
    align-items: flex-start;
    flex-direction: column;
    width: 100%;
    max-height: 100px;
    overflow-y: auto;
    padding: 0;
    font-size: 1rem;
    gap: 0.2em;
    overflow-x: hidden;
    background-color: var(--background-color);
    border: solid 1px var(--info-text);
    visibility: hidden;
    position:absolute;
    bottom: 0.85rem;
    left: 0;
    box-sizing: border-box;
}

::-webkit-scrollbar{
    width: 0.3em;
}


::-webkit-scrollbar-thumb{
    background-color: var(--primary-color);
    border-radius: 100vh;
}

.selectionOption{
    width: 100%;
    list-style-type: none;
    justify-content: left;
    text-align: left;
    padding-block: 0.3em;
    padding-inline: 0.4em;
    cursor: pointer;
    background-color: var(--secondary-color);
}

.selectionOption:hover{
    background-color: var(--selected-color);
}

#guessing{
    display: flex;
    width: 100%;
    flex-direction: column;
    gap: 8%;
}

.game-row{
    display: flex;
    width: 100%;
    flex-direction: row;
    gap: 2%;
    justify-content: center;
}

.game-label{
    font-size: 1.3rem;
    background-color: var(--background-color);
    width: 24.5%;
    padding-block: 0.7rem;
    border: 0.2rem solid var(--selected-color);
    cursor: default;
    height: 1.2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-grow: 0;
    font-weight: bold;
    height: 1.2rem;
}

.game-box{
    font-size: 1.05rem;
    background-color: var(--background-color);
    width: 24.5%;
    padding-block: 0.7rem;
    border: 0.2rem solid var(--selected-color);
    cursor: default;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 1.2rem;
    font-weight: bold;
}


#game {
    display: flex;
}

